# routes/index.js
@@ -1,7 +1,7 @@
 const express = require('express');
 var router = express.Router();
 
-router.use('/contacts', require('./contacts'));
+router.use('/clients', require('./clients'));
 router.use('/api-docs', require('./swagger'));
 
 router.get('/', function(req, res, next) {
